@@ -5,6 +5,9 @@ CHANGES
 3.4.2 (unreleased)
 ------------------
 
+- Provide more logging output for the various stages and actions of evolving a
+  database.
+
 - Fixed bug: A failing last generation would allow starting an app server
   without having evolved to the minimum generation.
    
